--- a/src/StringEncrypter/App.xaml
+++ b/src/StringEncrypter/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Converters.xaml" />
                 <ResourceDictionary Source="Resources/DefaultStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
