--- a/src/StringEncrypter/Controls/KeyIVControl.xaml
+++ b/src/StringEncrypter/Controls/KeyIVControl.xaml
@@ -8,7 +8,21 @@
              d:DesignHeight="40"
              d:DesignWidth="800"
              mc:Ignorable="d">
-    <StackPanel Margin="4,0" Orientation="Horizontal">
+    <WrapPanel Margin="4,0">
+        <DockPanel Width="180"
+                   Height="30"
+                   Margin="8,4">
+            <TextBlock VerticalAlignment="Center" Text="Encoding:" />
+            <Rectangle Width="1" Margin="4,0" />
+            <ComboBox x:Name="CmboxEncoding"
+                      Height="30"
+                      MinHeight="18"
+                      VerticalAlignment="Center"
+                      VerticalContentAlignment="Center"
+                      DisplayMemberPath="Name"
+                      SelectedItem="{Binding ElementName=cfgControl, Path=Encoding, Converter={StaticResource Encoding2InfoConverter}}" />
+        </DockPanel>
+
         <DockPanel Width="180"
                    Height="30"
                    Margin="8,4">
@@ -36,5 +50,5 @@
                      VerticalContentAlignment="Center"
                      Text="{Binding ElementName=cfgControl, Path=IV, Mode=TwoWay}" />
         </DockPanel>
-    </StackPanel>
+    </WrapPanel>
 </UserControl>
